--- a/index.html
+++ b/index.html
@@ -12,5 +12,6 @@
    </head>
    <body>
 	<button onclick='Count()'>Start Counting!</button>
+	   Press <a href="http://www.google.com">here</a> to do stuff
    </body>
 </html>
