--- a/index.html
+++ b/index.html
@@ -13,5 +13,9 @@
    <body>
 	<button onclick='Count()'>Start Counting!</button>
 	   Press <a href="test.html">here</a> to do stuff
+	<div>
+    <a href="https://plot.ly/~marc.braden/0/?share_key=a1LySTcGZ5yary69DBWjpm" target="_blank" title="basic-line" style="display: block; text-align: center;"><img src="https://plot.ly/~marc.braden/0.png?share_key=a1LySTcGZ5yary69DBWjpm" alt="basic-line" style="max-width: 100%;width: 600px;"  width="600" onerror="this.onerror=null;this.src='https://plot.ly/404.png';" /></a>
+    <script data-plotly="marc.braden:0" sharekey-plotly="a1LySTcGZ5yary69DBWjpm" src="https://plot.ly/embed.js" async></script>
+</div>
    </body>
 </html>
