--- a/index.html
+++ b/index.html
@@ -11,10 +11,11 @@
   function interact(){
     var number = window.prompt("Guess a number: ");
     window.alert(Game(number));
+  }
   </script>
 <body>
   <p>Hi, this is Marc's page.</p>
-  <button onclick="interact()">Click me</button>
+  <button onclick="interact()">Run My Code</button>
   
 </body>
 </html>
