--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <body>
 
 <img src="https://image.freepik.com/free-vector/blue-sign-come-we-are-open_100959-37.jpg" height="300" width="300">
-<p>
-<a href="JavaGuess.html">Guessing Game</a>
-</p>
+  <p>Check out the links below for awesome javascript coding</p>
+  <a href="JavaGuess.html">Guessing Game</a>
+  <a href="JavaCount.html">Type Stuff</a>
 </body>
 </html>
