--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 <img src="https://image.freepik.com/free-vector/blue-sign-come-we-are-open_100959-37.jpg" height="300" width="300">
   <p>Check out the links below for awesome javascript coding</p>
-  <a href="JavaGuess.html">Guessing Game</a>
+  <a href="JavaGuess.html">Guessing Game</a><br>
   <a href="JavaKey.html">Type Stuff</a>
 </body>
 </html>
