--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
 <img src="https://image.freepik.com/free-vector/blue-sign-come-we-are-open_100959-37.jpg" height="300" width="300">
   <p>Check out the links below for awesome javascript coding</p>
   <a href="JavaGuess.html">Guessing Game</a><br>
-  <a href="JavaKey.html">Type Stuff</a>
+  <a href="JavaKey.html">Type Stuff</a><br>
+  <?php
+  echo "Also my first PHP script!";
+  ?>
 </body>
 </html>
