--- a/index.html
+++ b/index.html
@@ -6,5 +6,6 @@
   <p>Check out the links below for awesome javascript coding</p>
   <a href="JavaGuess.html">Guessing Game</a><br>
   <a href="JavaKey.html">Type Stuff</a><br>
+  <a href="1OpenStaxKinematics.pdf">OpenStaxKinematics</a><br>
 </body>
 </html>
